Updated formatting - fixed description overflow text issue

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  background-color: #8995d8;
+  background-color: #959fd8;
   border-radius: 30px;
   display: block;
   margin-left: 3%;
@@ -31,7 +31,7 @@ li {
   position: sticky;
   overflow: hidden;
   text-align: left;
-  font-size: 50px;
+  font-size: 54px;
   margin-left: 15px;
   padding-left: 5%;
   padding-top: 3%;
@@ -46,11 +46,11 @@ li {
   position: sticky;
   overflow: hidden;
   text-align: left;
-  font-size: 52px;
+  font-size: 56px;
   margin-left: 15px;
   padding-left: 5%;
   padding-top: 3%;
-  color: rgb(98, 59, 183);
+  color: rgb(88, 69, 182);
   font-weight: bold;
   transition: ease-in-out;
 }
@@ -160,7 +160,6 @@ h3.dateAndTime:hover {
 
 input.inputButton {
   display: block;
-  outline: none;
   background-color: #ffffff;
   color: rgb(88, 69, 182);
   text-align: center;
@@ -174,7 +173,6 @@ input.inputButton {
 
 input.inputButton:hover {
   display: block;
-  outline: none;
   text-align: center;
   position: static;
   border-radius: 40px;
@@ -189,8 +187,8 @@ input.inputButton:hover {
 .today {
   color: #fff;
   text-align: left;
-  font-size: 26px;
-  margin-left: 12%;
+  font-size: 30px;
+  margin-left: 30%;
   font-weight: bold;
   margin-top: 15px;
 }
@@ -251,11 +249,14 @@ button.CorF:hover {
   color: white;
 }
 
+li.feelsLike {
+  font-style: italic;
+}
+
 .CorFLetter {
-  font-size: 18px;
   text-align: left;
   color: white;
-  font-size: 25px;
+  font-size: 20px;
   padding-bottom: 20px;
 }
 
@@ -300,9 +301,8 @@ h3.current {
   text-align: center;
   position: relative;
   color: white;
-  background-color: #6a84ed;
+  background-color: #717fcd;
   border-radius: 100px;
-  border: 4px solid rgb(132, 114, 217);
   padding: 15px 10px 15px 10px;
   margin-left: 5px;
   margin-right: 5px;
@@ -316,7 +316,7 @@ h3.current:hover {
   text-align: center;
   color: white;
   position: relative;
-  background-color: #717fcd;
+  background-color: #6a84ed;
   border-radius: 100px;
   border: 4px solid rgb(97, 90, 194);
   padding: 15px 10px 15px 10px;
@@ -325,27 +325,21 @@ h3.current:hover {
   font-size: 20px;
 }
 
-.curWeatherIcon {
-  border-radius: 250px;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  line-height: 50px;
-  flex-wrap: wrap;
-  text-align: center;
-  font-size: 38px;
-}
-
 img {
   text-align: center;
   align-items: center;
 }
 
-#icon {
+#currentIcon {
   display: flex;
   align-items: center;
-  font-size: 20px;
   text-align: center;
+  line-height: 50px;
+  flex-wrap: wrap;
+  font-size: 38px;
+  border-radius: 120px;
+  padding: 20px 20px 20px 20px;
+  margin-right: 15%;
 }
 
 .weatherIcon {
@@ -354,7 +348,7 @@ img {
   flex-wrap: wrap;
   text-align: right;
   color: #bdf6fc;
-  font-size: 20px;
+  font-size: 32px;
   padding: 20px 20px 20px 20px;
   font-weight: bold;
 }
@@ -369,7 +363,7 @@ h4.city {
   text-transform: capitalize;
   align-items: center;
   text-align: center;
-  background-color: #6a84ed;
+  background-color: #717fcd;
   border-radius: 50px;
   flex-wrap: wrap;
   position: static;
@@ -379,7 +373,6 @@ h4.city {
   padding: 18px 18px 18px 18px;
   margin-right: 8%;
   border-radius: 75px;
-  border: 4px solid rgb(113, 129, 221);
 }
 
 h4.city:hover {
@@ -396,7 +389,6 @@ h4.city:hover {
   color: #ffffff;
   padding: 18px 18px 18px 18px;
   margin-right: 5%;
-  background-color: #717fcd;
   border-radius: 60px;
   border: 4px solid rgb(97, 90, 194);
 }
@@ -406,27 +398,59 @@ h4.city:hover {
 }
 
 #forecast {
-  margin-left: 2%;
-  margin-right: 2%;
-}
-
-.weatherRow {
-  background-color: rgb(121, 94, 211);
-  border-radius: 50px;
-  align-items: center;
-  text-align: center;
   margin-left: 1%;
   margin-right: 1%;
 }
 
+.weatherRow {
+  background-color: #717fcd;
+  border-radius: 150px;
+  align-items: center;
+  text-align: center;
+  padding: 10px 10px 10px 10px;
+  margin-left: 4%;
+  margin-right: 4%;
+}
+
+.weatherRow:hover {
+  border-radius: 150px;
+  align-items: center;
+  text-align: center;
+  padding: 10px 10px 10px 10px;
+  margin-left: 4%;
+  margin-right: 4%;
+  background-color: #6a84ed;
+  border-radius: 100px;
+  border: 4px solid rgb(97, 90, 194);
+}
+
 .weather-forecast {
-  margin-top: 22px;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  margin-left: 11px;
+  margin-right: 11px;
   text-align: center;
   align-items: center;
   color: rgb(37, 6, 59);
   background-color: rgb(191, 193, 243);
   border-radius: 180px;
+  padding: 10px 10px 10px 10px;
   border: 2px solid rgb(97, 90, 194);
+}
+
+.weather-forecast:hover {
+  margin-top: 2px;
+  margin-bottom: 2px;
+  margin-left: 11px;
+  margin-right: 11px;
+  text-align: center;
+  align-items: center;
+  color: rgb(37, 6, 59);
+  background-color: #c6dfea;
+  border-radius: 180px;
+  padding: 10px 10px 10px 10px;
+  border: 2px solid rgb(97, 90, 194);
+  font-weight: bold;
 }
 
 .weather-forecast-day {
@@ -443,60 +467,7 @@ h4.city:hover {
 }
 
 .weather-forecast-temperatures {
-  font-size: 18px;
-}
-
-.otherDaysFor {
-  margin-top: 22px;
-  text-align: center;
-  align-items: center;
-  color: rgb(37, 6, 59);
-  background-color: rgb(212, 207, 234);
-  border-radius: 180px;
-  border: 2px solid rgb(97, 90, 194);
-}
-
-.otherDays {
-  text-align: center;
-  color: white;
-  background-color: #7083d8;
-  position: relative;
-  border-radius: 100px;
-  border: 3px solid rgb(113, 113, 221);
-  padding: 5px 5px 5px 5px;
-  margin-top: 1%;
-  margin-bottom: 1%;
-  font-size: 16px;
-}
-
-.weatherHeading {
-  text-align: right;
-  margin-right: 10%;
-}
-
-.otherDays:hover {
-  text-align: center;
-  color: white;
-  background-color: #717fcd;
-  position: relative;
-  border-radius: 100px;
-  border: 3px solid rgb(83, 83, 187);
-  padding: 5px 5px 5px 5px;
-  margin-top: 1%;
-  margin-bottom: 1%;
-  font-size: 16px;
-}
-
-.dayOfWeek {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  color: rgb(87, 103, 196);
-  text-align: right;
-  font-size: 18px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  font-weight: bold;
+  font-size: 20px;
 }
 
 .foot {
